src/style/style.css
/* roboto-100 - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 100;
  src: url('Assets/fonts/roboto-v30-latin-100.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('Assets/fonts/roboto-v30-latin-100.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('Assets/fonts/roboto-v30-latin-100.woff2') format('woff2'), /* Super Modern Browsers */
       url('Assets/fonts/roboto-v30-latin-100.woff') format('woff'), /* Modern Browsers */
       url('Assets/fonts/roboto-v30-latin-100.ttf') format('truetype'), /* Safari, Android, iOS */
       url('Assets/fonts/roboto-v30-latin-100.svg#Roboto') format('svg'); /* Legacy iOS */
}
/* roboto-300 - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 300;
  src: url('../assets/fonts/roboto-v30-latin-300.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('../assets/fonts/roboto-v30-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../assets/fonts/roboto-v30-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
       url('../assets/fonts/roboto-v30-latin-300.woff') format('woff'), /* Modern Browsers */
       url('../assets/fonts/roboto-v30-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../assets/fonts/roboto-v30-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
}
/* roboto-regular - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: url('../assets/fonts/roboto-v30-latin-regular.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('../assets/fonts/roboto-v30-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../assets/fonts/roboto-v30-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('../assets/fonts/roboto-v30-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('../assets/fonts/roboto-v30-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../assets/fonts/roboto-v30-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
}
/* roboto-500 - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 500;
  src: url('../assets/fonts/roboto-v30-latin-500.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('../assets/fonts/roboto-v30-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../assets/fonts/roboto-v30-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
       url('../assets/fonts/roboto-v30-latin-500.woff') format('woff'), /* Modern Browsers */
       url('../assets/fonts/roboto-v30-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../assets/fonts/roboto-v30-latin-500.svg#Roboto') format('svg'); /* Legacy iOS */
}
/* roboto-700 - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 700;
  src: url('../assets/fonts/roboto-v30-latin-700.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('../assets/fonts/roboto-v30-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../assets/fonts/roboto-v30-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
       url('../assets/fonts/roboto-v30-latin-700.woff') format('woff'), /* Modern Browsers */
       url('../assets/fonts/roboto-v30-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../assets/fonts/roboto-v30-latin-700.svg#Roboto') format('svg'); /* Legacy iOS */
}
/* roboto-900 - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 900;
  src: url('../assets/fonts/roboto-v30-latin-900.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('../assets/fonts/roboto-v30-latin-900.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../assets/fonts/roboto-v30-latin-900.woff2') format('woff2'), /* Super Modern Browsers */
       url('../assets/fonts/roboto-v30-latin-900.woff') format('woff'), /* Modern Browsers */
       url('../assets/fonts/roboto-v30-latin-900.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../assets/fonts/roboto-v30-latin-900.svg#Roboto') format('svg'); /* Legacy iOS */
}

html, body {
  width: 100%;
  min-height: 100vh;
  margin: 0px;
  padding: 0px;
  font-family: 'Roboto', sans-serif;
  text-align: center;
  background-image: url('Assets/images/background.jpg');
}

footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: black;
  color: white;
  justify-content: center;
  align-self: center;
  align-items: center;
  gap: 0.5rem;
  font-size: 18px;
  display: flex;
}

a { 
  color: inherit; 
}

/* MAIN SKELETON */

header {
  padding: 1.5rem;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  background-color: #0ea5e9;
}

.siteTitle {
  text-transform: uppercase;
  background-image: linear-gradient(
    -225deg,
    #ffffff 0%,
    #0f8500 10%,
    #16bb00 29%,
    #ffffff 40%,
    #ffffff 50%,
    #f10000 69%,
    #970000 85%,
    #ffffff 100%
  );
  background-size: auto auto;
  background-clip: border-box;
  background-size: 200% auto;
  color: #fff;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  animation: textclip 5s linear infinite;
  font-size: 60px;
}

@keyframes textclip {
  to {
    background-position: 200% center;
  }
}

.navigation {
  display: flex;
  gap: 2rem;
}

#content {
  height: 100%;
}

main {
  padding: 3.5rem;
  margin-top: 2.5rem;
  margin-bottom: 2.5rem; 
}

.main-content {
  padding: 3rem;
  background-color: #300808;
  animation: rise 1.5s ease-in infinite;
  background-image: radial-gradient(#ff2500 15%, rgba(255, 80, 0, 0) 90%);
  color: #ffd900;
  border-top-left-radius: 5rem;
  border-top-right-radius: 5rem;
  border: solid black 0.1rem;
  overflow-y: none;
  height: 800px;
}

@keyframes rise {
  0%    { background-image: radial-gradient(#ff2500 10%, rgba(255, 80, 0, 0) 70%); }
  20%   { background-image: radial-gradient(#ff2500 12%, rgba(255, 80, 0, 0) 70%); }
  80%   { background-image: radial-gradient(#ff2500 15%, rgba(255, 80, 0, 0) 70%); }
  100%  { background-image: radial-gradient(#ff2500 12%, rgba(255, 80, 0, 0) 70%); }
}

/* CUSTOM ITEMS */

.navButton {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  background-color: #E5E7EB;
  border: 1px solid #E5E7EB;
  border-radius: 1rem;
  padding: 0.5rem 0.7rem;
  filter: drop-shadow(1px 2px 0 rgb(184, 184, 184));
}

.navButton > img,
.navButton > p {
  pointer-events: none;
}

.navButton:hover:enabled {
  filter: brightness(90%) drop-shadow(1px 2px 0 rgb(184, 184, 184));
}

.icon:active:enabled,
.navButton:active:enabled {
  transform: translateY(4px) translateX(2px);
  filter: brightness(90%) drop-shadow(1px 1px 0 #666);
}

.icon {
  filter: drop-shadow(1px 2px 0 rgb(184, 184, 184));
  width: 32px;
}

.icon-link {
  width: 24px;
}

/* width */
::-webkit-scrollbar {
  width: 0.5rem;
}

/* Track */
::-webkit-scrollbar-track {
  background: rgba(0, 0, 0, 0);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: rgb(255, 217, 0);
  border-radius: 5rem;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgba(255, 217, 0, 0.5);
  border-radius: 5rem;
}

/* Home */

.gridHome {
  height: inherit;
  overflow-y: auto;
  padding-bottom: 2rem;
}

.homeTitle {
  font-size: xx-large;
}

.homeDescription {
  margin-bottom: 2rem;
}

.previewContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.previewPizzaContainer {
  width: 550px;
  height: 500px;
  background-color: white;
  padding: 1rem;
}

#idPreviewPizza {
  max-width: 100%;
  max-height: 100%;
}

.previewContainerCtrl {
  display: flex;
  gap: 0.3rem;
}

/* CONTACT */

.gridContact {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  padding-bottom: 2.5rem;
  gap: 0.5rem;
  height: inherit;
  overflow-y: auto;
}

.gridContact > :last-child {
  align-self: center;
}

.contactTitle {
  font-size: 24px;
  font-weight: 700;
}

.gridContact > button {
  font-weight: bold;
}

/* MENU */

.menuList {
  text-align: left;
  overflow-y: auto;
  height: inherit;
}

.dishContainerName { 
  font-size: 48px;
  margin-bottom: 0;
  margin-top: 0.5rem;
  color: #ff5000;
}

.dishContainer {
  display: flex;
  flex-direction: column;
}

.dishContainer > div {
  display: grid;
  grid-template-columns: 1fr 0.1fr;
}

.dish > div > :first-child {
  font-weight: bold;
}

.dish > div > :last-child {
  font-size: small;
}

.dishContainer > div > :last-child {
  text-align: center;
  border-left: dashed 0.1rem #ffd900;
}

/* MOBILE */

@media only screen and (max-height: 1200px) {
  .main-content {
    height: 600px;
  }
}

@media only screen and (min-height: 801px) and (max-height: 1199px) {
  .main-content {
    height: 500px;
  }
}

@media only screen and (min-height: 701px) and (max-height: 800px) {
  .main-content {
    height: 400px;
  }
}

@media only screen and (min-height: 501px) and (max-height: 700px) {
  .main-content {
    height: 300px;
  }
}

@media only screen and (max-height: 500px) {
  .main-content {
    height: 250px;
  }
}

@media only screen and (min-width: 751px) and (max-width: 950px) {
  /* MAIN CONTENT */

  header {
    gap: 1rem;
  }

  .siteTitle {
    font-size: 40px;
  }

  @keyframes rise {
    0%    { background-image: radial-gradient(#c51e00 10%, rgba(255, 80, 0, 0) 100%); }
    20%   { background-image: radial-gradient(#c51e00 12%, rgba(255, 80, 0, 0) 100%); }
    80%   { background-image: radial-gradient(#c51e00 15%, rgba(255, 80, 0, 0) 100%); }
    100%  { background-image: radial-gradient(#c51e00 12%, rgba(255, 80, 0, 0) 100%); }
  } 

  /* MENU */

  .previewPizzaContainer {
    width: 450px;
    height: 400px;
  }

  /* CONTACT */

  .gridContact {
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
  }
}

@media only screen and (max-width: 750px) {
  /* MAIN CONTENT */

  html {
    font-size: 14px;
  }

  .siteTitle {
    font-size: 40px;
  }

  header {
    flex-direction: column;
    gap: 1rem;
  }
  
  @keyframes rise {
    0%    { background-image: radial-gradient(#c51e00 0%, rgba(255, 80, 0, 0) 100%); }
    20%   { background-image: radial-gradient(#c51e00 2%, rgba(255, 80, 0, 0) 100%); }
    80%   { background-image: radial-gradient(#c51e00 5%, rgba(255, 80, 0, 0) 100%); }
    100%  { background-image: radial-gradient(#c51e00 2%, rgba(255, 80, 0, 0) 100%); }
  } 

  /* HOME */

  .homeTitle {
    font-size: large;
  }

  /* MENU */

  .previewPizzaContainer {
    width: 250px;
    height: 200px;
  }

  .dishContainer > div {
    grid-template-columns: 1fr 0.2fr;
  }

  /* CONTACT */

  .gridContact {
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
  }

  .mapLocation {
    width: 300px;
  }
}

